--- a/index.html
+++ b/index.html
@@ -806,5 +806,9 @@
             });
         });
     </script>
+
+    <!-- 🔥 CHARGEZ LE JAVASCRIPT À LA FIN POUR DE MEILLEURES PERFORMANCES -->
+    <script src="script.js"></script>
+    
 </body>
 </html>
